Crash when turning of path animation while Spline IK is active. #62048

Closed
opened 2019-02-28 14:58:42 +01:00 by Niels · 6 comments

System Information
Operating system: Windows 10
Graphics card:

Blender Version
Broken:
2.8 2019-02-28
Worked: (optional)

Blender crashes as soon as you turn of path animation while there is a SplineIK aplied.

1:Create curve
2:Create bones
3:Aply an SplineIK modifier to bones (target Curve)
4:Select curve and under Object Data turn of Path animation
5:crash

0801c0d36e74f7ecdc40b793f774d19f.gif

**System Information** Operating system: Windows 10 Graphics card: **Blender Version** Broken: 2.8 2019-02-28 Worked: (optional) Blender crashes as soon as you turn of path animation while there is a SplineIK aplied. 1:Create curve 2:Create bones 3:Aply an SplineIK modifier to bones (target Curve) 4:Select curve and under Object Data turn of Path animation 5:crash ![0801c0d36e74f7ecdc40b793f774d19f.gif](https://archive.blender.org/developer/F6730358/0801c0d36e74f7ecdc40b793f774d19f.gif)
Author

Added subscriber: @DonkeyLore

Added subscriber: @DonkeyLore

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Joshua Leung was assigned by Sebastian Parborg 2019-02-28 16:51:09 +01:00

curve.blend

Backtrace:

Thread 28 "blender" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffd43fb700 (LWP 29260)]
splineik_init_tree_from_pchan (scene=0x7fffd8e03008, UNUSED_ob=0x7fffe95f5408, pchan_tip=0x7fffd2022988)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/armature_update.c:201
201			splineLen = ikData->tar->runtime.curve_cache->path->totdist;
(gdb) bt
#0  splineik_init_tree_from_pchan (scene=0x7fffd8e03008, UNUSED_ob=0x7fffe95f5408, pchan_tip=0x7fffd2022988)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/armature_update.c:201
#1  0x00005555580cfad7 in splineik_init_tree (scene=0x7fffd8e03008, ob=0x7fffe95f5408, UNUSED_ctime=1)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/armature_update.c:258
#2  0x00005555580d0854 in BKE_pose_splineik_init_tree (scene=0x7fffd8e03008, ob=0x7fffe95f5408, ctime=1)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/armature_update.c:546
#3  0x00005555580d0c87 in BKE_pose_eval_init_ik (depsgraph=0x7fffea011908, scene=0x7fffd8e03008, object=0x7fffe95f5408)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/armature_update.c:627
#4  0x00005555586b887e in std::__invoke_impl<void, void (*&)(Depsgraph*, Scene*, Object*), Depsgraph*, Scene*&, Object*&> (__f=
    @0x7fffcfbc8520: 0x5555580d0b87 <BKE_pose_eval_init_ik>, __args#0=@0x7fffd43fab10: 0x7fffea011908, __args#1=@0x7fffcfbc8530: 0x7fffd8e03008,
    __args#2=@0x7fffcfbc8528: 0x7fffe95f5408) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:60
#5  0x00005555586b72f7 in std::__invoke<void (*&)(Depsgraph*, Scene*, Object*), Depsgraph*, Scene*&, Object*&> (__fn=
    @0x7fffcfbc8520: 0x5555580d0b87 <BKE_pose_eval_init_ik>, __args#0=@0x7fffd43fab10: 0x7fffea011908, __args#1=@0x7fffcfbc8530: 0x7fffd8e03008,
    __args#2=@0x7fffcfbc8528: 0x7fffe95f5408) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:95
#6  0x00005555586b5b95 in std::_Bind<void (*(std::_Placeholder<1>, Scene*, Object*))(Depsgraph*, Scene*, Object*)>::__call<void, Depsgraph*&&, 0ul, 1ul, 2ul>(std::tuple<Depsgraph*&&>&&, std::_Index_tuple<0ul, 1ul, 2ul>) (this=0x7fffcfbc8520, __args=...)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:400
#7  0x00005555586b3a94 in std::_Bind<void (*(std::_Placeholder<1>, Scene*, Object*))(Depsgraph*, Scene*, Object*)>::operator()<Depsgraph*, void>(Depsgraph*&&)
    (this=0x7fffcfbc8520, __args#0=@0x7fffd43fab10: 0x7fffea011908) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:484
#8  0x00005555586b095e in std::_Function_handler<void (Depsgraph*), std::_Bind<void (*(std::_Placeholder<1>, Scene*, Object*))(Depsgraph*, Scene*, Object*)> >::_M_invoke(std::_Any_data const&, Depsgraph*&&) (__functor=..., __args#0=@0x7fffd43fab10: 0x7fffea011908)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:297
#9  0x00005555586cbf97 in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (this=0x7fffcf1d3bc0, __args#0=0x7fffea011908)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:687
#10 0x00005555586cb575 in DEG::deg_task_run_func (pool=0x7fffcd5ab008, taskdata=0x7fffcf1d3b48, thread_id=5)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:88
#11 0x0000555558688364 in handle_local_queue (thread_id=5, tls=0x7fffd8e9a908)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:417
- 12 task_scheduler_thread_run (thread_p=0x7fffd8e9a8f8) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:446
- 13 0x00007ffff63993c3 in start_thread () from /lib64/libpthread.so.0
#14 0x00007ffff134e3ef in clone () from /lib64/libc.so.6
[curve.blend](https://archive.blender.org/developer/F6730806/curve.blend) Backtrace: ``` Thread 28 "blender" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffd43fb700 (LWP 29260)] splineik_init_tree_from_pchan (scene=0x7fffd8e03008, UNUSED_ob=0x7fffe95f5408, pchan_tip=0x7fffd2022988) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/armature_update.c:201 201 splineLen = ikData->tar->runtime.curve_cache->path->totdist; (gdb) bt #0 splineik_init_tree_from_pchan (scene=0x7fffd8e03008, UNUSED_ob=0x7fffe95f5408, pchan_tip=0x7fffd2022988) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/armature_update.c:201 #1 0x00005555580cfad7 in splineik_init_tree (scene=0x7fffd8e03008, ob=0x7fffe95f5408, UNUSED_ctime=1) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/armature_update.c:258 #2 0x00005555580d0854 in BKE_pose_splineik_init_tree (scene=0x7fffd8e03008, ob=0x7fffe95f5408, ctime=1) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/armature_update.c:546 #3 0x00005555580d0c87 in BKE_pose_eval_init_ik (depsgraph=0x7fffea011908, scene=0x7fffd8e03008, object=0x7fffe95f5408) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/armature_update.c:627 #4 0x00005555586b887e in std::__invoke_impl<void, void (*&)(Depsgraph*, Scene*, Object*), Depsgraph*, Scene*&, Object*&> (__f= @0x7fffcfbc8520: 0x5555580d0b87 <BKE_pose_eval_init_ik>, __args#0=@0x7fffd43fab10: 0x7fffea011908, __args#1=@0x7fffcfbc8530: 0x7fffd8e03008, __args#2=@0x7fffcfbc8528: 0x7fffe95f5408) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:60 #5 0x00005555586b72f7 in std::__invoke<void (*&)(Depsgraph*, Scene*, Object*), Depsgraph*, Scene*&, Object*&> (__fn= @0x7fffcfbc8520: 0x5555580d0b87 <BKE_pose_eval_init_ik>, __args#0=@0x7fffd43fab10: 0x7fffea011908, __args#1=@0x7fffcfbc8530: 0x7fffd8e03008, __args#2=@0x7fffcfbc8528: 0x7fffe95f5408) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:95 #6 0x00005555586b5b95 in std::_Bind<void (*(std::_Placeholder<1>, Scene*, Object*))(Depsgraph*, Scene*, Object*)>::__call<void, Depsgraph*&&, 0ul, 1ul, 2ul>(std::tuple<Depsgraph*&&>&&, std::_Index_tuple<0ul, 1ul, 2ul>) (this=0x7fffcfbc8520, __args=...) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:400 #7 0x00005555586b3a94 in std::_Bind<void (*(std::_Placeholder<1>, Scene*, Object*))(Depsgraph*, Scene*, Object*)>::operator()<Depsgraph*, void>(Depsgraph*&&) (this=0x7fffcfbc8520, __args#0=@0x7fffd43fab10: 0x7fffea011908) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:484 #8 0x00005555586b095e in std::_Function_handler<void (Depsgraph*), std::_Bind<void (*(std::_Placeholder<1>, Scene*, Object*))(Depsgraph*, Scene*, Object*)> >::_M_invoke(std::_Any_data const&, Depsgraph*&&) (__functor=..., __args#0=@0x7fffd43fab10: 0x7fffea011908) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:297 #9 0x00005555586cbf97 in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (this=0x7fffcf1d3bc0, __args#0=0x7fffea011908) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:687 #10 0x00005555586cb575 in DEG::deg_task_run_func (pool=0x7fffcd5ab008, taskdata=0x7fffcf1d3b48, thread_id=5) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:88 #11 0x0000555558688364 in handle_local_queue (thread_id=5, tls=0x7fffd8e9a908) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:417 - 12 task_scheduler_thread_run (thread_p=0x7fffd8e9a8f8) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:446 - 13 0x00007ffff63993c3 in start_thread () from /lib64/libpthread.so.0 #14 0x00007ffff134e3ef in clone () from /lib64/libc.so.6 ```
Joshua Leung was unassigned by Alexander Gavrilov 2019-04-13 16:34:25 +02:00
Alexander Gavrilov self-assigned this 2019-04-13 16:34:25 +02:00

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung

This issue was referenced by 3d8790faf1

This issue was referenced by 3d8790faf17b665eecf10868939ce9fb9c794ddd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62048
No description provided.